<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="32dp"
    tools:context=".MainActivity">



    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/leftImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/beast_2" />

        <TextView
            android:id="@+id/splashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/splash"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="24sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/rightImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/beast_1" />

    </LinearLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <TextView
        android:id="@+id/configureTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingBottom="24dp"
        android:paddingTop="24dp"
        android:text="@string/configure_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/foodBeastConfigImageButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/background_light"
            android:onClick="doFBConfigButtonClick"
            app:srcCompat="@drawable/beast_2_100" />

        <ImageButton
            android:id="@+id/simulatorPreferencesButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:onClick="doPreferencesConfigButtonOnClick"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/globe" />

        <ImageButton
            android:id="@+id/grazingBeastConfigImageButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@android:color/white"
            android:onClick="doGBConfigButtonOnClick"
            app:srcCompat="@drawable/beast_1_50" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectAChallengeTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:fontFamily="cursive"
            android:text="@string/select_challenge_title"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp"
            tools:text="@string/select_challenge_title" />

        <ImageButton
            android:id="@+id/challengeOneImageButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:adjustViewBounds="true"
            android:background="@android:color/background_light"
            android:onClick="doChallengeActivity"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cup" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="24dp"
        android:paddingTop="24dp">

        <ImageButton
            android:id="@+id/informationImageButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:hint="Background Information"
            android:onClick="doShowInformation"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/information" />

        <ImageButton
            android:id="@+id/showHistoryFromMainImageButton"
            android:background="@android:color/white"
            app:srcCompat="@drawable/scroll"
            android:onClick="doShowHistory"
            android:hint="Show History"
            android:scaleType="fitCenter"
            android:layout_gravity="center_vertical"
            android:layout_width="32dp"
            android:layout_height="32dp" />

        <ImageButton
            android:id="@+id/resetButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="resetAllParams"
            android:src="@drawable/restart" />

        <ImageButton
            android:id="@+id/runButton"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="runOnClick"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:scaleType="fitCenter"
            android:src="@drawable/start"
            />

    </LinearLayout>
</LinearLayout>