<resources>
    <string name="app_name">SwarmThing</string>
    <string name="splash">Swarm Thing</string>
    <string name="hint_enter_number">10</string>
    <string name="run">RUN</string>
    <string name="configure_title">Configure beasts and the simulation world, choose a challenge then run</string>
    <string name="configure_food_beast">Configure FoodBeast</string>
    <string name="configure_grazing_beast">Configure GrazingBeast</string>
    <string name="configure_simulation">Configure Simulation</string>
    <string name="configfb_init_energy">Initial Energy</string>
    <string name="configgb_init_energy">Initial Energy</string>
    <string name="done_button">Done</string>
    <string name="whoami_key">com.example.brebner.swarmthing.whoami</string>
    <string name="beast_number_key">com.example.brebner.swarmthing.beast_number_key</string>
    <string name="fb_init_energy_key">com.example.brebner.swarmthing.fb_init_energy_key</string>
    <string name="gb_init_energy_key">com.example.brebner.swarmthing.gb_init_energy_key</string>
    <string name="other_ratio_key">com.example.brebner.swarmthing.other_ratio_key</string>
    <string name="enter_other_ratio">GB/FB ratio </string>
    <string name="endActivityGameOverTitle">Game Over - no beasts!</string>
    <string name="endActivityTimeUpTitle">Game Over - time up!</string>
    <string name="number_fb">Number of FB</string>
    <string name="number_gb">Number of GB</string>
    <string name="final_fb_value_key">com.example.brebner.swarmthing.final_fb_value_key</string>
    <string name="final_gb_value_key">com.example.brebner.swarmthing.final_gb_value_key</string>
    <string name="start_time_key">com.example.brebner.swarmthing.start_time_key</string>
    <string name="game_duration_title">Game Duration</string>
    <string name="other_config_nbeasts_title">Number of beasts</string>
    <string name="other_nbeasts_key">com.example.brebner.swarmthing.nbeasts_key</string>
    <string name="config_fb_split_title">Configure split threshold</string>
    <string name="config_gb_split_title">Configure split threshold</string>
    <string name="fb_split_threshold_key">com.example.brebner.swarmthing.fb_split_threshold_key</string>
    <string name="gb_split_threshold_key">com.example.brebner.swarmthing.gb_split_threshold_key</string>
    <string name="play_again_button">Play Again</string>
    <string name="recorder_graph_file_name">recorder_graph_file</string>
    <string name="other_config_max_time_title">Simulation time</string>
    <string name="other_maxtime_key">com.example.brebner.swarmthing.maxtime_key</string>
    <string name="final_time_up_key">com.example.brebner.swarmthing.timeup_key</string>
    <string name="show_fps_radio_title">FPS</string>
    <string name="show_time_radio_title">Remaining Time</string>
    <string name="other_show_time">com.example.brebner.swarmthing.other_show_time_key</string>
    <string name="other_show_fps">com.example.brebner.swarmthing.show_fps_key</string>
    <string name="config_fb_sane_light_title">Max light energy per beast</string>
    <string name="config_fb_max_age_title">Max Age</string>
    <string name="fb_max_age_key">com.brebner.example.swarmthing.fb_max_age_key</string>
    <string name="fb_sane_light_key">com.example.brebner.swarmthing.fb_sane_light_key</string>
    <string name="config_gb_max_age_title">Max age</string>
    <string name="gb_max_age_key">com.example.brebner/swarmthing.gb_max_age_key</string>
    <string name="reset_all_params">RESET</string>
    <string name="no_time_limit">No time limit</string>
    <string name="other_unlimited_time_key">com.example.brebner.swarmthing.other_unlimited_time_key</string>
    <string name="show_elapsed_time_title">Elapsed time</string>
    <string name="other_elapsed_time_key">com.example.brebner.swarmthing.show_elapsed_time_key</string>
    <string name="sound_on_title">On</string>
    <string name="sound_effect_title">Sound Effects</string>
    <string name="sound_effects_on_key">com.example.brebner.swarmthing.sounds_effect_on_key</string>
    <string name="display_options_title">Display Options</string>
    <string name="challenge_title_text">Available Challenges</string>
    <string name="beasts_died_title">Beasts died x </string>
    <string name="number_beasts_title">Beasts</string>
    <string name="beasts_born_title">Beasts born x </string>
    <string name="number_fb_title">Food beasts</string>
    <string name="challenge_fragment_description_key">com.example.brebner.swarmthing.challenge_fragment_description_key</string>
    <string name="fragment_description_title">Description :</string>
    <string name="choose_challenge_title">Choose challenge [0, 1, ...]</string>
    <string name="challenge_choose_button_text">Choose</string>
    <string name="challenge_choice_key">com.example.brebner.swarmthing.challenge_choice_key</string>
    <string name="select_challenge_title">Click on the cup to select a challenge :</string>
    <string name="information_title">Background</string>
    <string name="information_details">
        This game is a simulation with two sorts of "beasts", that swarm in the world.
        The FoodBeast (in green) and the GrazingBeast (in yellow).
        The FoodBeast gets energy from the environment - it basks in the sun.
        The GrazingBeast can only get energy by taking it from a
        FoodBeast. A beast with too little energy, will die, and beasts have a maximum age.\n\n
        You can configure many parameters on how this
        all works, and that will result in differing outcomes when
        you run the simulation. There are challenges you can accept that will get you points, or
        you can just explore.\n
        \n
        If you want to interact with the world, touch the screen while the simulation is running
        to create a red FingerBeast - which doesn't do much other than get in the way.\n
        \n
        Enjoy!\n
        \n
        The Gadgets and Games team\n
    </string>
    <string name="information_go_back_button_text">Go Back</string>
    <string name="challenge_result_title">Challenge Result</string>
    <string name="challenge_result_key">com.example.brebner.swarmthing.challenge_result_key</string>
    <string name="challenge_result_points_key">com.example.brebner.swarmthing.challenge_result_points_key</string>
    <string name="challenge_choice_fragment_button_text"><![CDATA[<]]></string>
    <string name="challenge_none_description">No challenge selected</string>
    <string name="challenge_most_dead_5m_description">Most beasts killed in 5 minutes</string>
    <string name="challenge_most_born_5m_description">Most beasts born in 5 minutes</string>
    <string name="challenge_most_beast_iterations_5m_description">Most peaks of beast numbers in 5 minutes</string>
    <string name="challenge_most_protected_5m_description">Least beasts killed in 5 minutes</string>
    <string name="challenge_phoenix_5m_description">Recovery from the lowest beast number in 5 mins</string>
    <string name="overall_score_key">com.example.brebner.swarmthing.overall_score_key</string>
    <string name="show_history_button_text">History</string>
    <string name="com.example.brebner.swarmthing.show_history_title_text">HISTORY</string>
    <string name="overall_score_title">Overall Score :</string>
    <string name="reset_score_button">Reset Scores</string>
    <string name="shared_preference_name">com.example.brebner.swarmthing.preferences</string>
</resources>
