...

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/historyPlayAgain"
        app:layout_constraintTop_toBottomOf="@+id/showHistoryTitleTextView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

...
        android:onClick="doHistoryPlayAgain"
        android:text="@string/play_again_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="8dp"
...
