...
                    android:checked="true"
                    android:fontFamily="cursive"
                    android:text="@string/show_time_radio_title"
                    android:textColor="@android:color/holo_blue_dark" />

                <CheckBox
                    android:id="@+id/showElapsedTimeCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="cursive"
                    android:text="@string/show_elapsed_time_title"
                    android:textColor="@android:color/holo_blue_dark" />
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/simulationDoneButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="doSimDone"
                android:text="@string/done_button" />

...
